--- a/index.html
+++ b/index.html
@@ -3,110 +3,148 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Whencha</title>
+  <title>WhenCha — чай як стан</title>
   <style>
     body {
       margin: 0;
+      padding: 0;
       font-family: 'Georgia', serif;
-      background: #fefdf9;
+      background-color: #fdfaf5;
       color: #333;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
       min-height: 100vh;
       padding: 2rem;
-      text-align: center;
+      box-sizing: border-box;
+    }
+
+    .lang-switch {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+    }
+
+    .lang-switch button {
+      background: none;
+      border: none;
+      font-size: 1rem;
+      margin-left: 10px;
+      cursor: pointer;
+      font-weight: bold;
+      color: #444;
+    }
+
+    .content {
+      max-width: 800px;
+      width: 100%;
+      text-align: left;
     }
 
     h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
+      font-size: 2rem;
+      margin-bottom: 1rem;
+      text-align: center;
+      font-weight: 400;
     }
 
-    .subtitle {
-      font-size: 1.2rem;
-      margin-bottom: 2rem;
-      color: #777;
-    }
-
-    .buttons a {
-      margin: 0.5rem;
-      padding: 0.7rem 1.5rem;
-      text-decoration: none;
-      color: white;
-      background-color: #5c4437;
-      border-radius: 5px;
-      font-size: 1rem;
-    }
-
-    .language-switcher {
-      position: absolute;
-      top: 1rem;
-      right: 1rem;
-    }
-
-    .language-switcher button {
-      background: none;
-      border: none;
-      color: #5c4437;
-      font-weight: bold;
-      cursor: pointer;
-      margin: 0 0.5rem;
-    }
-
-    .philosophy {
-      max-width: 600px;
-      margin-top: 2rem;
+    p {
       line-height: 1.6;
+      margin-bottom: 1.2rem;
+    }
+
+    .values, .footer {
+      margin-top: 2rem;
+    }
+
+    .contact-links {
+      margin-top: 2rem;
+      display: flex;
+      gap: 1rem;
+      justify-content: center;
+    }
+
+    .contact-links a {
+      text-decoration: none;
+      color: #fff;
+      background-color: #333;
+      padding: 0.6rem 1.2rem;
+      border-radius: 4px;
+      font-size: 0.9rem;
+      transition: background 0.3s ease;
+    }
+
+    .contact-links a:hover {
+      background-color: #555;
+    }
+
+    @media (max-width: 600px) {
+      body {
+        padding: 1rem;
+      }
+
+      h1 {
+        font-size: 1.5rem;
+      }
     }
   </style>
 </head>
 <body>
-
-  <div class="language-switcher">
-    <button onclick="switchLanguage('uk')">UA</button> | 
-    <button onclick="switchLanguage('en')">EN</button>
+  <div class="lang-switch">
+    <button onclick="setLang('uk')">UA</button>
+    <button onclick="setLang('en')">EN</button>
   </div>
 
-  <h1>Whencha</h1>
-  <div class="subtitle" id="tagline">Час бути справжньою</div>
+  <div class="content" id="uk">
+    <h1>WhenCha — чай як стан</h1>
+    <p>Ми часто не помічаємо, як найважливіші моменти життя відбуваються з чашкою в руках.</p>
+    <p>Кава — перед тим, як усе змінити. Чашка чаю на кухні, де пахне хлібом і сонцем. Матча — щоб набратися сил у новому дні...</p>
+    <p>Цей бренд — не про ідеальний стиль життя. Він — про справжнє. І з цього почався мій шлях.</p>
 
-  <div class="buttons">
-    <a href="mailto:contact@whencha.com">Email</a>
-    <a href="https://www.instagram.com/whencha.ua" target="_blank">Instagram</a>
+    <p><strong>Цінності:</strong><br>
+      • Повільність — щоб почути себе<br>
+      • Жіночність — жива, глибока, без масок<br>
+      • Зрілість — з любов’ю до себе й своєї історії<br>
+      • Дім і світло — не як місце, а як відчуття<br>
+      • Щирість і природність<br>
+      • Прийняття — болю, радості, змін<br>
+      • Увага до деталей — бо саме в них живе справжнє
+    </p>
+
+    <div class="contact-links">
+      <a href="mailto:contact@whencha.com">Email</a>
+      <a href="https://www.instagram.com/whencha.ua" target="_blank">Instagram</a>
+    </div>
   </div>
 
-  <div class="philosophy" id="philosophy">
-    Ми часто не помічаємо, як найважливіші моменти життя відбуваються з чашкою в руках.<br><br>
-    Цей чай — не про товар. Він — про стан.<br>
-    Про теплі паузи, в яких можна повернутися до себе.<br><br>
-    Нехай у твоєму дні буде хоча б 5 хвилин, в яких є лише ти, тиша і смак.
+  <div class="content" id="en" style="display: none;">
+    <h1>WhenCha — tea as a state</h1>
+    <p>We often don’t notice how the most important moments of life happen with a cup in hand.</p>
+    <p>Coffee — before everything changes. A cup of tea in the kitchen where it smells like bread and sun. Matcha — to gain strength in a new day...</p>
+    <p>This brand isn’t about a perfect lifestyle. It’s about what’s real. And that’s where my journey began.</p>
+
+    <p><strong>Values:</strong><br>
+      • Slowness — to hear yourself<br>
+      • Femininity — alive, deep, unmasked<br>
+      • Maturity — with love for yourself and your story<br>
+      • Home & light — not as a place but as a feeling<br>
+      • Sincerity and naturalness<br>
+      • Acceptance — of pain, joy, change<br>
+      • Attention to details — because that’s where the truth lives
+    </p>
+
+    <div class="contact-links">
+      <a href="mailto:contact@whencha.com">Email</a>
+      <a href="https://www.instagram.com/whencha.ua" target="_blank">Instagram</a>
+    </div>
   </div>
 
   <script>
-    const texts = {
-      uk: {
-        tagline: "Час бути справжньою",
-        philosophy: `Ми часто не помічаємо, як найважливіші моменти життя відбуваються з чашкою в руках.<br><br>
-        Цей чай — не про товар. Він — про стан.<br>
-        Про теплі паузи, в яких можна повернутися до себе.<br><br>
-        Нехай у твоєму дні буде хоча б 5 хвилин, в яких є лише ти, тиша і смак.`
-      },
-      en: {
-        tagline: "A moment to be real",
-        philosophy: `We often don’t notice how the most important moments of life happen with a cup in hand.<br><br>
-        This tea is not about the product. It’s about the state.<br>
-        About warm pauses where you return to yourself.<br><br>
-        May there be at least 5 minutes in your day where it’s just you, silence, and taste.`
-      }
-    }
-
-    function switchLanguage(lang) {
-      document.getElementById('tagline').innerHTML = texts[lang].tagline;
-      document.getElementById('philosophy').innerHTML = texts[lang].philosophy;
+    function setLang(lang) {
+      document.getElementById('uk').style.display = (lang === 'uk') ? 'block' : 'none';
+      document.getElementById('en').style.display = (lang === 'en') ? 'block' : 'none';
     }
   </script>
-
 </body>
 </html>
