--- a/index.html
+++ b/index.html
@@ -1,109 +1,89 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WhenCha</title>
-
-  <!-- Подключение шрифтов -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.cdnfonts.com/css/tavitaj" rel="stylesheet">
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>WhenCha — чай як стан</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Taviraj:wght@500&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Inter', sans-serif;
       margin: 0;
-      padding: 40px 20px;
-      background: #fffdf8;
-      color: #1c1c1c;
+      padding: 0;
+      background-color: #f6f4f0; /* рисовая бумага */
+      color: #3c2f25; /* мягкий коричневый */
+      font-family: 'Inter', sans-serif;
+      line-height: 1.7;
     }
 
-    .brand-title {
-      font-family: 'Tavitaj', serif;
-      font-size: 2.8em;
-      text-align: center;
-      margin-bottom: 10px;
+    .container {
+      max-width: 720px;
+      margin: 60px auto;
+      padding: 0 20px;
     }
 
-    .subtitle {
-      font-size: 1.1em;
-      text-align: center;
-      margin-bottom: 40px;
-      max-width: 700px;
-      margin-left: auto;
-      margin-right: auto;
-      line-height: 1.6;
-    }
-
-    .section-title {
-      font-family: 'Tavitaj', serif;
-      font-size: 1.6em;
-      margin-top: 40px;
+    h1 {
+      font-family: 'Taviraj', serif;
+      font-size: 36px;
+      margin-bottom: 20px;
       text-align: center;
     }
 
-    .values {
-      max-width: 700px;
-      margin: 20px auto;
-      font-size: 1.05em;
-      line-height: 1.6;
+    p {
+      margin-bottom: 16px;
+      font-size: 18px;
     }
 
-    .values ul {
+    ul {
       padding-left: 20px;
+      margin-bottom: 24px;
     }
 
-    .contacts {
-      text-align: center;
+    li {
+      margin-bottom: 8px;
+    }
+
+    .links {
       margin-top: 40px;
+      display: flex;
+      gap: 20px;
+      justify-content: center;
     }
 
-    .contacts a {
-      display: inline-block;
-      margin: 8px 12px;
-      color: #1c1c1c;
+    .links a {
       text-decoration: none;
-      border: 1px solid #1c1c1c;
-      padding: 8px 14px;
-      border-radius: 4px;
+      color: #3c2f25;
       font-weight: 500;
-      transition: 0.3s ease;
+      border-bottom: 1px solid #d3c7bc;
+      padding-bottom: 2px;
     }
 
-    .contacts a:hover {
-      background-color: #1c1c1c;
-      color: #fffdf8;
+    .links a:hover {
+      opacity: 0.8;
     }
   </style>
 </head>
 <body>
-
-  <div class="brand-title">WhenCha — чай як стан</div>
-
-  <div class="subtitle">
-    Ми часто не помічаємо, як найважливіші моменти життя відбуваються з чашкою в руках.<br><br>
-    Кава — перед тим, як усе змінити. Чашка чаю на кухні, де пахне хлібом і сонцем. Матча — щоб набратися сил у новому дні...<br><br>
-    Цей бренд — не про ідеальний стиль життя. Він — про справжнє. І з цього почався мій шлях.
-  </div>
-
-  <div class="section-title">Цінності</div>
-
-  <div class="values">
+  <div class="container">
+    <h1>WhenCha — чай як стан</h1>
+    <p>Ми часто не помічаємо, як найважливіші моменти життя відбуваються з чашкою в руках.</p>
+    <p>Кава — перед тим, як усе змінити. Чашка чаю на кухні, де пахне хлібом і сонцем. Матча — щоб набратися сил у новому дні...</p>
+    <p>Цей бренд — не про ідеальний стиль життя. Він — про справжнє. І з цього почався мій шлях.</p>
+    
+    <p><strong>Цінності:</strong></p>
     <ul>
       <li>Повільність — щоб почути себе</li>
+      <li>Жіночність — жива, глибока, без масок</li>
       <li>Зрілість — з любов’ю до себе й своєї історії</li>
       <li>Дім і світло — не як місце, а як відчуття</li>
       <li>Щирість і природність</li>
       <li>Прийняття — болю, радості, змін</li>
       <li>Увага до деталей — бо саме в них живе справжнє</li>
     </ul>
-  </div>
 
-  <div class="section-title">Контакти</div>
-  <div class="contacts">
-    <a href="mailto:whencha.contact@gmail.com">whencha.contact@gmail.com</a>
-    <a href="https://www.instagram.com/whencha.rituals" target="_blank">Instagram</a>
+    <div class="links">
+      <a href="mailto:contact@whencha.com">Email</a>
+      <a href="https://www.instagram.com" target="_blank">Instagram</a>
+    </div>
   </div>
-
 </body>
 </html>
