--- a/index-en.html
+++ b/index-en.html
@@ -3,32 +3,85 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WhenCha — tea as a state</title>
+  <title>WhenCha — Tea as a State</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Taviraj:wght@600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      padding: 40px 20px;
+      background-color: #f5f3ed; /* рисовая бумага */
+      font-family: 'Inter', sans-serif;
+      color: #3c2f25;
+      line-height: 1.6;
+      max-width: 700px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    h1 {
+      font-family: 'Taviraj', serif;
+      font-size: 2.2em;
+      margin-bottom: 0.6em;
+      color: #3c2f25;
+    }
+
+    h2 {
+      font-family: 'Taviraj', serif;
+      font-size: 1.5em;
+      margin-top: 2em;
+      color: #3c2f25;
+    }
+
+    ul {
+      padding-left: 1.2em;
+    }
+
+    a {
+      color: #3c2f25;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    .lang-switch {
+      text-align: right;
+      margin-bottom: 20px;
+      font-size: 0.9em;
+    }
+  </style>
 </head>
 <body>
-  <h1>WhenCha — tea as a state</h1>
-  <p>
-    We often don’t notice how the most important moments of life happen with a cup in hand.
-    Coffee — before everything changes. A cup of tea in a kitchen that smells like bread and sunlight. 
-    Matcha — to gather strength for the new day...
-  </p>
-  <p>
-    This brand is not about a perfect lifestyle. It’s about what’s real. And that’s where my path began.
-  </p>
+
+  <div class="lang-switch">
+    <a href="index.html">UA</a> / EN
+  </div>
+
+  <h1>WhenCha — Tea as a State</h1>
+
+  <p>We often don’t notice how the most important moments in life happen with a cup in our hands.  
+  Coffee — before everything changes.  
+  A cup of tea in the kitchen, where it smells like bread and sunlight.  
+  Matcha — to gather strength for the day ahead…</p>
+
+  <p>This brand isn’t about a perfect lifestyle.  
+  It’s about what’s real.  
+  And that’s where my journey began.</p>
+
   <h2>Values:</h2>
   <ul>
     <li>Slowness — to hear yourself</li>
     <li>Maturity — with love for yourself and your story</li>
-    <li>Home & light — not as a place, but as a feeling</li>
-    <li>Sincerity & naturalness</li>
-    <li>Acceptance — of pain, joy, change</li>
-    <li>Attention to detail — because that’s where the realness lives</li>
+    <li>Home and light — not just a place, but a feeling</li>
+    <li>Sincerity and naturalness</li>
+    <li>Acceptance — of pain, joy, and change</li>
+    <li>Attention to detail — because truth lives in the little things</li>
   </ul>
 
-  <p>
-    <a href="mailto:contact@whencha.com">Email</a> |
-    <a href="https://www.instagram.com/whencha.ua" target="_blank">Instagram</a> |
-    <a href="index.html">UA</a>
-  </p>
+  <h2>Contact</h2>
+  <p><a href="mailto:contact@whencha.com">contact@whencha.com</a></p>
+  <p><a href="https://www.instagram.com/">Instagram</a></p>
+
 </body>
 </html>
